ENH: Added and enabled IA-FEMesh testing.
git-svn-id: http://svn.slicer.org/Slicer3/trunk@12364 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Modules/Meshing/CMakeLists.txt
+++ b/Modules/Meshing/CMakeLists.txt
@@ -33,6 +33,6 @@ ENDFOREACH(lib)
 
 
 # --------------------------------------------------------------------------
-#if(Slicer3_BUILD_TESTING)
-#  ADD_SUBDIRECTORY(Testing)
-#endif(Slicer3_BUILD_TESTING)
+if(Slicer3_BUILD_TESTING)
+  ADD_SUBDIRECTORY(Testing)
+endif(Slicer3_BUILD_TESTING)
