COMP: Attempting to fix a problem when building the testing framework under windows.
git-svn-id: http://svn.slicer.org/Slicer3/trunk@12369 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Modules/Meshing/Common/CMakeLists.txt
+++ b/Modules/Meshing/Common/CMakeLists.txt
@@ -88,6 +88,7 @@ SET ( LIB_SRCS
     vtkMimxColorCodeMeshSeedActor.cxx
     #
     vtkMimxBoundaryConditionActor.cxx
+    vtkMimxTestErrorCallback.cxx
 )
  
 SET_SOURCE_FILES_PROPERTIES(
@@ -116,6 +117,7 @@ SET_SOURCE_FILES_PROPERTIES(
   vtkMimxUnstructuredGridActor.cxx
   vtkMimxCurve.cxx
   vtkMimxBoundaryConditionActor.cxx
+  vtkMimxTestErrorCallback.cxx
   WRAP_EXCLUDE
   )
 
