ENH: Adding new module
git-svn-id: http://svn.slicer.org/Slicer3/trunk@12379 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Modules/CMakeLists.txt
+++ b/Modules/CMakeLists.txt
@@ -79,6 +79,8 @@ SET(modules
   ExtractSubvolumeROI
   CollectFiducials 
   PETCTFusion
+  CollectFiducials
+  IGTToolSelector
   )
 
 if(Slicer3_USE_OPENIGTLINK)
