ENH: add NAMIC logo in the MRIBiasFieldCorrection module
git-svn-id: http://svn.slicer.org/Slicer3/trunk@12383 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Applications/CLI/MRIBiasFieldCorrection/CMakeLists.txt
+++ b/Applications/CLI/MRIBiasFieldCorrection/CMakeLists.txt
@@ -38,7 +38,8 @@ endif (WIN32)
 
 set (${PROJECT_NAME}_SOURCE ${PROJECT_NAME}.cxx)
 
-generateclp (${PROJECT_NAME}_SOURCE ${PROJECT_NAME}.xml)
+generateclp (${PROJECT_NAME}_SOURCE ${PROJECT_NAME}.xml
+  ${Slicer3_SOURCE_DIR}/Resources/NAMICLogo.h)
 
 
 #-----------------------------------------------------------------------------
