BUG: fix for the welcome module gui panel size.
git-svn-id: http://svn.slicer.org/Slicer3/trunk@12399 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Modules/SlicerWelcome/CMakeLists.txt
+++ b/Modules/SlicerWelcome/CMakeLists.txt
@@ -51,6 +51,7 @@ set(SlicerWelcome_SRCS
   vtkSlicerWelcomeLogic.cxx
   vtkSlicerWelcomeGUI.cxx
   vtkSlicerWelcomeIcons.cxx
+  vtkMRMLSlicerWelcomeNode.cxx
   )
 
 # --------------------------------------------------------------------------
