ENH: more development.
git-svn-id: http://svn.slicer.org/Slicer3/trunk@12407 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Modules/LiverAblation/CMakeLists.txt
+++ b/Modules/LiverAblation/CMakeLists.txt
@@ -61,6 +61,7 @@ set(LiverAblation_SRCS
   ${CMAKE_CURRENT_SOURCE_DIR}/Wizard/vtkLiverAblationLoadingPreoperativeDataStep.cxx
   ${CMAKE_CURRENT_SOURCE_DIR}/Wizard/vtkLiverAblationCalibrationStep.cxx
   ${CMAKE_CURRENT_SOURCE_DIR}/Wizard/vtkLiverAblationUserInputStep.cxx
+  ${CMAKE_CURRENT_SOURCE_DIR}/Wizard/vtkLiverAblationPlanningStep.cxx
   ${CMAKE_CURRENT_SOURCE_DIR}/Wizard/vtkKWGuideWidget.cxx
 
 
