ENH: fixes for Mac to properly patch and build incrtcl.
git-svn-id: http://svn.slicer.org/Slicer3/trunk@12431 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/SuperBuild/CMakeLists.txt
+++ b/SuperBuild/CMakeLists.txt
@@ -403,6 +403,10 @@ if(Slicer3_USE_KWWIDGETS)
 
   if(WIN32)
   elseif(APPLE)
+    set(blt_BUILD_IN_SOURCE 1)
+    set(blt_CONFIGURE sh configure --with-tcl=${tcl_build}/lib --with-tk=${tcl_build}/lib --prefix=${tcl_build})
+    set(blt_BUILD make ${parallelism_level})
+    set(blt_INSTAL make install)
   #if { ![file exists $Slicer3_LIB/tcl/isPatchedBLT] } { 
   #              puts "Patching..." 
   #              runcmd curl -k -O https://share.spl.harvard.edu/share/birn/public/software/External/Patches/bltpatch 
