ENH: SlicerQt: Add a basic implementation of qCTKDoubleRangeSlider
git-svn-id: http://svn.slicer.org/Slicer3/trunk@12440 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Libs/qCTKWidgets/CMakeLists.txt
+++ b/Libs/qCTKWidgets/CMakeLists.txt
@@ -65,6 +65,8 @@ SET(qCTKWidgets_SRCS
   qCTKConsoleWidget.h
   qCTKCoordinatesWidget.cxx
   qCTKCoordinatesWidget.h
+  qCTKDoubleRangeSlider.cxx
+  qCTKDoubleRangeSlider.h
   qCTKDoubleSlider.cxx
   qCTKDoubleSlider.h
   qCTKDynamicSpacer.cxx
@@ -104,6 +106,7 @@ SET(qCTKWidgets_MOC_SRCS
   qCTKColorPickerButton.h
   qCTKConsoleWidget.h
   qCTKCoordinatesWidget.h
+  qCTKDoubleRangeSlider.h
   qCTKDoubleSlider.h
   qCTKDynamicSpacer.h
   qCTKFittedTextBrowser.h
