BUG: Added missing OpenIGTLink directory to Slicer3SetupPaths.bat (the problem was that modules that relied on OpenIGTLink were not displayed in the module list when Slicer was started by running Slicer3SetupPaths.bat & Slicer3-real.exe)
git-svn-id: http://svn.slicer.org/Slicer3/trunk@12450 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -339,6 +339,7 @@ IF (Slicer3_USE_KWWIDGETS)
   set(extra_dirs
     "${Teem_DIR}/bin"
     "${BatchMake_DIR}/bin"
+    "${OpenIGTLink_DIR}/bin"
     "${Slicer3_HOME}/${Slicer3_INSTALL_PLUGINS_BIN_DIR}"
     "${Slicer3_HOME}/${Slicer3_INSTALL_PLUGINS_LIB_DIR}"
     "${Slicer3_HOME}/${Slicer3_INSTALL_MODULES_BIN_DIR}"
