ENH: Add qCTKRangeWidget + redesigned the range widgets: qCTKRangeSlider, qCTKDoubleRangeSlider
git-svn-id: http://svn.slicer.org/Slicer3/trunk@12467 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Libs/qCTKWidgets/CMakeLists.txt
+++ b/Libs/qCTKWidgets/CMakeLists.txt
@@ -83,6 +83,8 @@ SET(qCTKWidgets_SRCS
   qCTKModelTester.h
   qCTKRangeSlider.cxx
   qCTKRangeSlider.h
+  qCTKRangeWidget.cxx
+  qCTKRangeWidget.h
   qCTKSettings.cxx
   qCTKSettings.h
   qCTKSliderSpinBoxWidget.cxx
@@ -114,6 +116,7 @@ SET(qCTKWidgets_MOC_SRCS
   qCTKMenuButton.h
   qCTKModelTester.h
   qCTKRangeSlider.h
+  qCTKRangeWidget.h
   qCTKSettings.h
   qCTKSliderSpinBoxWidget.h
   qCTKTestApplication.h
@@ -125,6 +128,7 @@ SET(qCTKWidgets_MOC_SRCS
 SET(qCTKWidgets_UI_SRCS
   Resources/UI/qCTKAddRemoveComboBox.ui
   Resources/UI/qCTKSliderSpinBoxWidget.ui
+  Resources/UI/qCTKRangeWidget.ui
 )
 
 # Python wrap 
