BUG: Add qCTKDoubleSliderTest1, fix a bug when changing the singlestep was setting the wrong value to the slider (because the range was set too late).
git-svn-id: http://svn.slicer.org/Slicer3/trunk@12468 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Libs/qCTKWidgets/Testing/CMakeLists.txt
+++ b/Libs/qCTKWidgets/Testing/CMakeLists.txt
@@ -54,6 +54,7 @@ SIMPLE_TEST( qCTKCollapsibleButtonTest1 )
 SIMPLE_TEST( qCTKCollapsibleGroupBoxTest1 )
 SIMPLE_TEST( qCTKColorPickerButtonTest1 )
 SIMPLE_TEST( qCTKCoordinatesWidgetTest1 )
+SIMPLE_TEST( qCTKDoubleSliderTest1 )
 SIMPLE_TEST( qCTKFittedTextBrowserTest1 )
 SIMPLE_TEST( qCTKFlowLayoutTest1 )
 SIMPLE_TEST( qCTKMatrixWidgetTest1 )
