ENH:Cleaned up code for 3.6 release.
git-svn-id: http://svn.slicer.org/Slicer3/trunk@12471 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Modules/CMakeLists.txt
+++ b/Modules/CMakeLists.txt
@@ -77,7 +77,8 @@ SET(modules
   FourDImage
 #  FourDAnalysis
   ExtractSubvolumeROI
-  CollectFiducials 
+  CollectFiducials
+  IGTToolSelector 
   PETCTFusion
   IGTToolSelector
   )
