STYLE:ResampleVolume2 logo changed from ITK to NAMIC
git-svn-id: http://svn.slicer.org/Slicer3/trunk@12489 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Applications/CLI/CMakeLists.txt
+++ b/Applications/CLI/CMakeLists.txt
@@ -622,7 +622,7 @@ DiffusionApplications/ResampleDTI/dtiprocessFiles/itkHFieldToDeformationFieldIma
 )
 
 set ( ${CLP}_SOURCE ${CLP}.cxx ${TRANSFORM_SOURCE} )
-generateclp(${CLP}_SOURCE ${CLP}.xml ${Slicer3_SOURCE_DIR}/Resources/ITKLogo.h)
+generateclp(${CLP}_SOURCE ${CLP}.xml ${Slicer3_SOURCE_DIR}/Resources/NAMICLogo.h)
 
 add_library(${CLP}Lib SHARED ${${CLP}_SOURCE})
 slicer3_set_plugins_output_path(${CLP}Lib)
