STYLE: Update acknowledgements and logo for RegisterImagesMultiRes
git-svn-id: http://svn.slicer.org/Slicer3/trunk@12510 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Applications/CLI/RegisterImagesModule/MultiResApplications/CMakeLists.txt
+++ b/Applications/CLI/RegisterImagesModule/MultiResApplications/CMakeLists.txt
@@ -20,7 +20,8 @@ PROJECT( RegisterImagesMultiResApplications )
     ScalingHeuristics.cxx
     ConvertSlicerROIToRegion.cxx) 
   GENERATECLP( RegisterImagesMultiRes_SOURCE
-               RegisterImagesMultiRes.xml )
+               RegisterImagesMultiRes.xml 
+               ${Slicer3_SOURCE_DIR}/Resources/NAMICLogo.h)
   INCLUDE_DIRECTORIES( ${RegisterImagesMultiResApplications_BINARY_DIR} )
 
   # Build the library / plugin
