STYLE: Update acknowledgements and logo for RegisterImages.
git-svn-id: http://svn.slicer.org/Slicer3/trunk@12511 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Applications/CLI/RegisterImagesModule/Applications/CMakeLists.txt
+++ b/Applications/CLI/RegisterImagesModule/Applications/CMakeLists.txt
@@ -18,7 +18,7 @@ PROJECT( RegisterImagesModuleApplications )
   SET( RegisterImagesSlicer_SOURCE RegisterImagesSlicer.cxx )
   GENERATECLP( RegisterImagesSlicer_SOURCE 
                RegisterImagesSlicer.xml
-               ${RegisterImagesModuleApplications_SOURCE_DIR}/logo.h )
+               ${Slicer3_SOURCE_DIR}/Resources/NAMICLogo.h )
   INCLUDE_DIRECTORIES( ${RegisterImagesModuleApplications_BINARY_DIR} )
 
   # Build the library / plugin
