STYLE: Update  acknowledgements and logo for TransformFromFiducials.
git-svn-id: http://svn.slicer.org/Slicer3/trunk@12512 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Applications/CLI/RegisterImagesModule/Applications/CMakeLists.txt
+++ b/Applications/CLI/RegisterImagesModule/Applications/CMakeLists.txt
@@ -43,7 +43,7 @@ PROJECT( RegisterImagesModuleApplications )
   SET( TransformFromFiducials_SOURCE TransformFromFiducials.cxx )
   GENERATECLP( TransformFromFiducials_SOURCE 
                TransformFromFiducials.xml
-               ${RegisterImagesModuleApplications_SOURCE_DIR}/logo.h )
+               ${Slicer3_SOURCE_DIR}/Resources/NAMICLogo.h )
   INCLUDE_DIRECTORIES( ${RegisterImagesModuleApplications_BINARY_DIR} )
 
   # Build the library / plugin
